--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "axios": "^1.8.4",
     "chat-app": "file:..",
     "framer-motion": "^12.6.3",
