--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,11 +18,13 @@
     "framer-motion": "^12.6.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
+    "@vitejs/plugin-react": "^4.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "vite": "^6.2.6",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3",
     "zustand": "^5.0.3"
@@ -31,12 +33,10 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.4.0",
     "daisyui": "^5.0.17",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.6"
+    "globals": "^15.15.0"
   }
 }
