--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,26 +8,26 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint ."
-
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "@vitejs/plugin-react": "^4.4.0",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "axios": "^1.8.4",
     "chat-app": "file:..",
+    "daisyui": "^5.0.17",
+    "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.6.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
-    "@vitejs/plugin-react": "^4.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
-    "vite": "^6.2.6",
     "socket.io-client": "^4.8.1",
-    "daisyui": "^5.0.17",
     "tailwindcss": "^4.1.3",
+    "vite": "^6.2.6",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
